--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+$navbarBackgroundHighlight: white;
+$navbarBackground: white;
+$btnPrimaryBackground: purple;
+
+body{
+    padding-top: 60px;
+}
+
+
+.navbar-inner{
+    border: 0;
+}
+
+.footer{
+    margin-top: 50px;
+    color: lightgray;
+    a{
+        color: gray;
+    }
+}
+
+.btn-primary {
+  background: purple;
+}
