--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,22 @@
 <html>
 <head>
   <title>One Month Rails</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= render 'layouts/bootstrap' %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+
   <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1.0" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
 </head>
 <body>
 
   <%= render 'layouts/header' %>
+<div class="container">
 
   <%= yield %>
 
   <%= render 'layouts/footer' %>
-
+</div>
 </body>
 </html>
