--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="center hero-unit">
+<div class="jumbotron">
     <h1>Welcome! </h1>
     <p>to <%= link_to 'One Month Rails',  "http://growthcode-omrails.heroku.com" %>
      </p>
