--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">OMRails</a>
+      <a class="navbar-brand" href="/">OMRails</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li>
-            <%= link_to 'Home',  root_path %>
+            <%= link_to 'Home', root_path %>
         </li>
         <li>
             <%= link_to 'About',  about_path %>
@@ -23,8 +23,13 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Login',  '#' %></li>
-
+        <% if user_signed_in? %>
+          <li><%= link_to "Add +", new_pin_path %></li>
+          <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
